--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,13 @@
 }
 
 @keyframes App-logo-spin {
-  from {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  50% {
     transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
