--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,14 @@
   font-weight: bold;
   border-radius: 15px;
   background-color: #f1356d;
-  padding: 7px;
+  padding: 8px;
+  margin: 2px;
 }
 
 .btn:hover {
   background-color: #f56d96;
-  border: 1px solid black;
+  outline: 2px solid black;
+  padding: 8px;
 }
 
 
